--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,34 +5,56 @@ name: CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [main]
   pull_request:
-    branches: [ master ]
+    branches: [main]
+
+env: 
+  AZURE_WEBAPP_NAME: 'app-soat-bc22-java1-dev-fr'
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B -DskipTests package --file pom.xml
-    - name: Run PostgreSQL
-      run: docker compose up -d
-    - name: Wait for Database to be up...
-      run: wget -qO- https://raw.githubusercontent.com/eficode/wait-for/$WAIT_FOR_VERSION/wait-for | sh -s -- localhost:5432 -- echo "Database is up"
-    - name: Run tests with Maven
-      run: mvn test
-    - uses: dorny/test-reporter@v1
-      if: success() || failure()
-      with:
-        name: Tests report
-        path: './target/surefire-reports/*.xml'
-        reporter: java-junit
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: "17"
+          distribution: "temurin"
+          cache: maven
+      - name: Build with Maven
+        run: mvn -B -DskipTests package --file pom.xml
+      - name: Run PostgreSQL
+        run: docker compose up -d
+      - name: Wait for Database to be up...
+        run: wget -qO- https://raw.githubusercontent.com/eficode/wait-for/$WAIT_FOR_VERSION/wait-for | sh -s -- localhost:5432 -- echo "Database is up"
+      - name: Run tests with Maven
+        run: mvn test
+      - uses: dorny/test-reporter@v1
+        if: success() || failure()
+        with:
+          name: Tests report
+          path: "./target/surefire-reports/*.xml"
+          reporter: java-junit
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: "development"
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    steps:
+      - uses: actions/checkout@v3
+      - name: Download build artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: build-artifact
+          path: build
+      - name: deploy to azure web-app
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{env.AZURE_WEBAPP_NAME }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }} 
+          package: './build'
