--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,7 @@ jobs:
         uses: actions/upload-artifact@v3.1.0
         with:
           name: build-artifact
+          path: target/*.jar
   deploy:
     runs-on: ubuntu-latest
     needs: build
