--- a/pom.xml
+++ b/pom.xml
@@ -146,7 +146,14 @@
             <version>4.0.1</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf-spring5</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
