--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/upload-artifact@v3.1.0
         with:
           name: build-artifact
-          path: target/*.jar
+          path: '${{ github.workspace }}/target/*.jar'
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -53,5 +53,6 @@ jobs:
         uses: azure/webapps-deploy@v2
         with:
           app-name: ${{env.AZURE_WEBAPP_NAME }}
+          slot-name: 'production'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }} 
-          package: './build'
+          package: '*.jar'
