--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,3 +1,8 @@
-CUSTOMCONNSTR_BDD_URL=jdbc:postgresql://localhost:5432/antigaspi
-CUSTOMCONNSTR_BDD_USER=user
-CUSTOMCONNSTR_BDD_PASSWORD=password
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+spring.datasource.username=sa
+spring.datasource.password=sa
+spring.jpa.hibernate.ddl-auto=create-drop
+
+REACT_ENV=http://localhost:3000
+ANGULAR_ENV=http://localhost:4200
