--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.username=sa
 spring.datasource.password=sa
 spring.jpa.hibernate.ddl-auto=create-drop
 
-REACT_ENV=http://localhost:3000
-ANGULAR_ENV=http://localhost:4200
+CUSTOMCONNSTR_REACT_ENV=http://localhost:3000
+CUSTOMCONNSTR_ANGULAR_ENV=http://localhost:4200
