--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,9 @@ spring:
     validate-on-migrate: true
     locations: classpath:db/migration
     table: flyway
+  sendgrid:
+    api-key: ${CUSTOMCONNSTR_SENDGRID_API_KEY}
+    url: ${CUSTOMCONNSTR_SENDGRID_URL}
 senGrid:
   enabled: true
   send-grid-api-key: SENDGRID_API_KEY
