--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,8 +1,7 @@
 CUSTOMCONNSTR_BDD_URL=jdbc:postgresql://localhost:5432/antigaspi
 CUSTOMCONNSTR_BDD_USER=user
 CUSTOMCONNSTR_BDD_PASSWORD=password
-CUSTOMCONNSTR_SENDGRID_KEY=SG.1234567890
-CUSTOMCONNSTR_SENDGRID_URL=https://api.sendgrid.com/v3/mail/send0
-#customconnstr-sendgrid.url=https://api.sendgrid.com/v3/mail/send
 sendgrid.url=${CUSTOMCONNSTR_SENDGRID_URL}
 sendgrid.api-key=${CUSTOMCONNSTR_SENDGRID_KEY}
+front.react-url=${CUSTOMCONNSTR_REACT_ENV}
+front.angular-url=${CUSTOMCONNSTR_ANGULAR_ENV}
