--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,27 @@ jobs:
         with:
           name: build-artifact
           path: '${{ github.workspace }}/target/*.jar'
+  deploy_js:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: "development"
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    steps:
+      - uses: actions/checkout@v3
+      - name: Download build artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: build-artifact
+          path: build
+      - name: deploy to azure web-app
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{env.AZURE_WEBAPP_NAME }}
+          slot-name: 'production'
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }} 
+          package: '*.jar'
   deploy-mm:
     runs-on: ubuntu-latest
     needs: build
