--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
     needs: build
     environment:
       name: "development"
-      url: ${{ steps.deploy-to-webapp-mm.outputs.webapp-url }}
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     steps:
       - uses: actions/checkout@v3
       - name: Download build artifact
@@ -55,4 +55,25 @@ jobs:
           slot-name: 'production'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }} 
           package: '*.jar'
+  deploy_mm:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: "development"
+      url: ${{ steps.deploy-to-webapp-mm.outputs.webapp-url }}
+    steps:
+      - uses: actions/checkout@v3
+      - name: Download build artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: build-artifact
+          path: build
+      - name: deploy to azure web-app
+        id: deploy-to-webapp-mm
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{env.MM_AZURE_WEBAPP_NAME }}
+          slot-name: 'production'
+          publish-profile: ${{ secrets.MM_AZURE_WEBAPP_PUBLISH_PROFILE }} 
+          package: '*.jar'   
 
