--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,25 +55,25 @@ jobs:
           slot-name: 'production'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }} 
           package: '*.jar'
-  deploy_mm:
-    runs-on: ubuntu-latest
+  deploy:
+    runs-on: windows-latest
     needs: build
     environment:
-      name: "development"
-      url: ${{ steps.deploy-to-webapp-mm.outputs.webapp-url }}
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Download build artifact
-        uses: actions/download-artifact@v3
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v2
         with:
           name: build-artifact
-          path: build
-      - name: deploy to azure web-app
-        id: deploy-to-webapp-mm
+
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: ${{env.MM_AZURE_WEBAPP_NAME }}
-          slot-name: 'production'
-          publish-profile: ${{ secrets.MM_AZURE_WEBAPP_PUBLISH_PROFILE }} 
-          package: '*.jar'   
+          app-name: 'app-soat-bc22-meb-dev-fr'
+          slot-name: 'Production'
+          publish-profile: ${{ secrets.MM_AZURE_WEBAPP_PUBLISH_PROFILE }}
+          package: '*.jar'
 
