--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,3 +1,6 @@
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 CUSTOMCONNSTR_BDD_URL=jdbc:postgresql://localhost:5432/antigaspi
 CUSTOMCONNSTR_BDD_USER=user
 CUSTOMCONNSTR_BDD_PASSWORD=password
@@ -5,3 +8,4 @@ sendgrid.url=${CUSTOMCONNSTR_SENDGRID_URL}
 sendgrid.api-key=${CUSTOMCONNSTR_SENDGRID_KEY}
 front.react-url=${CUSTOMCONNSTR_REACT_ENV}
 front.angular-url=${CUSTOMCONNSTR_ANGULAR_ENV}
+spring.jpa.hibernate.ddl-auto=create-drop
