--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,11 +1,15 @@
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.username=sa
+spring.datasource.password=sa
 CUSTOMCONNSTR_BDD_URL=jdbc:postgresql://localhost:5432/antigaspi
 CUSTOMCONNSTR_BDD_USER=user
 CUSTOMCONNSTR_BDD_PASSWORD=password
-sendgrid.url=${CUSTOMCONNSTR_SENDGRID_URL}
-sendgrid.api-key=${CUSTOMCONNSTR_SENDGRID_KEY}
-front.react-url=${CUSTOMCONNSTR_REACT_ENV}
-front.angular-url=${CUSTOMCONNSTR_ANGULAR_ENV}
-spring.jpa.hibernate.ddl-auto=create-drop
+CUSTOMCONNSTR_REACT_ENV=oui
+CUSTOMCONNSTR_ANGULAR_ENV=oui
+
+sendgrid.url=default
+sendgrid.api-key=default
+front.react-url=default
+front.angular-url=default
