--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,9 @@ spring:
   jpa:
     database: POSTGRESQL
     show-sql: true
+    hibernate:
+      # TODO go for the update way
+      ddl-auto: create-drop
   application:
     name: anti-gaspi
   datasource:
