--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -9,7 +9,7 @@ CUSTOMCONNSTR_BDD_PASSWORD=password
 CUSTOMCONNSTR_REACT_ENV=oui
 CUSTOMCONNSTR_ANGULAR_ENV=oui
 
-sendgrid.url=default
-sendgrid.api-key=default
+sendgrid.url=${CUSTOMCONNSTR_SENDGRID_URL}
+sendgrid.api-key=${CUSTOMCONNSTR_SENDGRID_KEY}
 front.react-url=default
 front.angular-url=default
