--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,8 +8,7 @@ spring:
     database: POSTGRESQL
     show-sql: true
     hibernate:
-      # TODO go for the update way
-      ddl-auto: create-drop
+      ddl-auto: update
   application:
     name: anti-gaspi
   datasource:
@@ -30,6 +29,4 @@ sendgrid:
   url: ${CUSTOMCONNSTR_SENDGRID_URL}
 server:
   port: 8081
-  servlet:
-    context-path: /api
 
