Fix offer update

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -11,5 +11,4 @@ CUSTOMCONNSTR_ANGULAR_ENV=oui
 
 sendgrid.url=${CUSTOMCONNSTR_SENDGRID_URL}
 sendgrid.api-key=${CUSTOMCONNSTR_SENDGRID_KEY}
-front.react-url=default
-front.angular-url=default
+server.front-url=${CUSTOMCONNSTR_FRONT_URL}
